@@ -69,9 +69,7 @@ struct OutputSet
     EHList outputs;
 };
 
-static OutputSet s_alerters;
 static OutputSet s_loggers;
-static OutputSet s_unified;
 
 bool EventManager::alert_enabled = true;
 bool EventManager::log_enabled = true;
@@ -82,14 +80,13 @@ bool EventManager::log_enabled = true;
 
 void EventManager::add_plugin(const LogApi* api)
 {
+    assert(api->flags & (OUTPUT_TYPE_FLAG__ALERT | OUTPUT_TYPE_FLAG__LOG));
     s_outputs.push_back(new Output(api));
 }
 
 void EventManager::release_plugins()
 {
-    s_alerters.outputs.clear();
     s_loggers.outputs.clear();
-    s_unified.outputs.clear();
 
     for ( auto* p : s_outputs )
         delete p;
@@ -108,18 +105,18 @@ void EventManager::dump_plugins()
 //-------------------------------------------------------------------------
 // lookups
 
-static Output* get_out(const char *keyword)
+static Output* get_out(const char* key)
 {
     for ( auto* p : s_outputs )
-        if ( !strcasecmp(p->api->base.name, keyword) )
+        if ( !strcasecmp(p->api->base.name, key) )
             return p;
 
     return NULL;
 }
 
-unsigned EventManager::get_output_type_flags(char *keyword)
+unsigned EventManager::get_output_type_flags(char* key)
 {
-    Output* p = get_out(keyword);
+    Output* p = get_out(key);
 
     if ( p )
         return p->api->flags;
@@ -154,35 +151,32 @@ void EventManager::copy_outputs(OutputSet* dst, OutputSet* src)
 void EventManager::instantiate(
     Output* p, Module* mod, SnortConfig* sc)
 {
+    bool enabled = false;
+
+    if ( (p->api->flags & OUTPUT_TYPE_FLAG__ALERT) && alert_enabled )
+        enabled = true;
+
+    if ( (p->api->flags & OUTPUT_TYPE_FLAG__LOG) && log_enabled )
+        enabled = true;
+
+    if ( !enabled )
+        return;
+
     p->handler = p->api->ctor(sc, mod);
-    assert(p->handler);  // FIXIT-H must handle case where not configured
+    assert(p->handler);
 
-    if ( (p->api->flags & OUTPUT_TYPE_FLAG__ALERT) &&
-        (p->api->flags & OUTPUT_TYPE_FLAG__LOG) )
-    {
-        if ( alert_enabled && log_enabled )
-            s_unified.outputs.push_back(p->handler);
-    }
-    else if ( p->api->flags & OUTPUT_TYPE_FLAG__ALERT )
-    {
-        if ( alert_enabled )
-            s_alerters.outputs.push_back(p->handler);
-    }
-
-    else if ( p->api->flags & OUTPUT_TYPE_FLAG__LOG )
-    {
-        if ( log_enabled )
-            s_loggers.outputs.push_back(p->handler);
-    }
-    else
-        ParseError("logger has no type %s\n", p->api->base.name);
+    p->handler->set_api(p->api);
+    s_loggers.outputs.push_back(p->handler);
 }
 
 // command line outputs
 void EventManager::instantiate(
     const char* name, SnortConfig* sc)
 {
-    Module* mod = ModuleManager::get_module(name);
+    // override prior outputs
+    // (last cmdline option wins)
+    s_loggers.outputs.clear();
+
     Output* p = get_out(name);
 
     if ( !p )
@@ -190,21 +184,20 @@ void EventManager::instantiate(
         ParseError("unknown logger %s\n", name);
         return;
     }
+    else if ( p->handler )
+    {
+        // configured by conf
+        s_loggers.outputs.push_back(p->handler);
+        return;
+    }
+    Module* mod = ModuleManager::get_module(name);
 
     if ( mod )
     {
-        // FIXIT-H this loses args if set in conf
         // emulate a config like name = { }
         mod->begin(name, 0, sc);
         mod->end(name, 0, sc);
     }
-
-    // override prior outputs
-    // (last cmdline option wins)
-    s_alerters.outputs.clear();
-    s_loggers.outputs.clear();
-    s_unified.outputs.clear();
-
     instantiate(p, mod, sc);
 }
 
@@ -212,6 +205,7 @@ void EventManager::instantiate(
 void EventManager::instantiate(
     const LogApi* api, Module* mod, SnortConfig* sc)
 {
+    // FIXIT-L instantiate each logger from conf at most once
     Output* p = get_out(api->base.name);
     instantiate(p, mod, sc);
 }
@@ -221,25 +215,13 @@ void EventManager::instantiate(
 
 void EventManager::open_outputs()
 {
-    for ( auto p : s_alerters.outputs )
-        p->open();
-
     for ( auto p : s_loggers.outputs )
-        p->open();
-
-    for ( auto p : s_unified.outputs )
         p->open();
 }
 
 void EventManager::close_outputs()
 {
-    for ( auto p : s_alerters.outputs )
-        p->close();
-
     for ( auto p : s_loggers.outputs )
-        p->close();
-
-    for ( auto p : s_unified.outputs )
         p->close();
 }
 
@@ -252,10 +234,7 @@ void EventManager::call_alerters(
             p->alert(pkt, message, event);
         return;
     }
-    for ( auto p : s_alerters.outputs )
-        p->alert(pkt, message, event);
-
-    for ( auto p : s_unified.outputs )
+    for ( auto p : s_loggers.outputs )
         p->alert(pkt, message, event);
 }
 
@@ -269,9 +248,6 @@ void EventManager::call_loggers(
         return;
     }
     for ( auto p : s_loggers.outputs )
-        p->log(pkt, message, event);
-
-    for ( auto p : s_unified.outputs )
         p->log(pkt, message, event);
 }
 
